--- a/package.json
+++ b/package.json
@@ -10,8 +10,16 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^4.4.1",
     "@astrojs/check": "^0.5.5",
+    "@astrojs/react": "^3.0.10",
+    "@fontsource/jost": "^5.0.16",
+    "astro": "^4.4.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "typescript": "^5.3.3"
+  },
+  "devDependencies": {
+    "@types/react": "^18.2.57",
+    "sass": "^1.71.1"
   }
 }
