--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fontsource-variable/montserrat": "^5.0.17",
     "@fontsource/jost": "^5.0.16",
     "astro": "^4.4.1",
+    "nanostores": "^0.11.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "typescript": "^5.3.3"
