--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@astrojs/check": "^0.5.5",
     "@astrojs/react": "^3.0.10",
+    "@astrojs/vercel": "^7.8.2",
     "@emailjs/browser": "^4.1.0",
     "@fontsource-variable/montserrat": "^5.0.17",
     "@fontsource/jost": "^5.0.16",
